--- a/account.html
+++ b/account.html
@@ -124,7 +124,7 @@
                     <div class="header__nav__option">
                         <div class="row">
                             <div class="col-lg-6 col-md-6">
-                                <input type="text" name="search" placeholder="Search..">
+                                <input id="search" type="text" name="search" placeholder="Search..">
                             </div>
                             <div class="col-lg-2 col-md-2">
                                 <i class="fa fa-heart d-block text-danger text-center"></i>
@@ -535,9 +535,9 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="footer__about">
-                        <h5 class="mb-3"><strong>THỜI TRANG SCARLET</strong></h5>
+                        <h5 class="mb-3"><strong>THỜI TRANG SCARLET</strong> <strong class="footer-responsive-icon"><i class="fa fa-caret-up" aria-hidden="true"></i></strong></h5>
                         <ul>
                             <li><a href="#">Đăng ký thành viên</a></li>
                             <li><a href="#">Ưu đãi Độc quyền</a></li>
@@ -545,9 +545,9 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="footer__about">
-                        <h5 class="mb-3"><strong>CHÍNH SÁCH</strong></h5>
+                        <h5 class="mb-3"><strong>CHÍNH SÁCH</strong> <strong class="footer-responsive-icon"><i class="fa fa-caret-up" aria-hidden="true"></i></strong></h5>
                         <ul>
                             <li><a href="#">Chính sách đổi trả 60 ngày</a></li>
                             <li><a href="#">Chính sách khuyến mãi</a></li>
@@ -555,23 +555,23 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="footer__about">
-                        <h5 class="mb-3"><strong>CHĂM SÓC KHÁCH HÀNG</strong></h5>
+                        <h5 class="mb-3"><strong>CHĂM SÓC KHÁCH HÀNG</strong> <strong class="footer-responsive-icon"><i class="fa fa-caret-up" aria-hidden="true"></i></strong></h5>
                         <ul>
                             <li><a href="#">Trải nghiệm mua sắm</a></li>
                             <li><a href="#">Hỏi đáp - FAQs</a></li>
                         </ul>
-                        <h5 class="mb-3 mt-2"><strong>KIẾN THỨC MẶC ĐẸP</strong></h5>
+                        <h5 class="mb-3 mt-2"><strong>KIẾN THỨC MẶC ĐẸP</strong> <strong class="footer-responsive-icon"><i class="fa fa-caret-up" aria-hidden="true"></i></strong></h5>
                         <ul>
                             <li><a href="#">Hướng dẫn chọn size</a></li>
                             <li><a href="#">Blog</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="footer__about">
-                        <h5 class="mb-3"><strong>ĐỊA CHỈ LIÊN HỆ</strong></h5>
+                        <h5 class="mb-3"><strong>ĐỊA CHỈ LIÊN HỆ</strong> <strong class="footer-responsive-icon"><i class="fa fa-caret-up" aria-hidden="true"></i></strong></h5>
                         <ul>
                             <li>Số 96 Định Công, Quận Hoàng Mai, TP.Hà Nội</li>
                             <li>1800.8001</li>
@@ -580,15 +580,28 @@
                     </div>
                 </div>
             </div>
+            <hr>
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-md-8 col-sm-12">
                     <div class="footer__copyright__text">
-                        <hr>
-                        <p>
-                            <strong>@CÔNG TY TNHH SACLET</strong>, CHỨNG NHẬN ĐĂNG KÝ DOANH NGHIỆP TỪ NGÀY 01/01/2024 
+                        <p class="text-center">
+                            <strong>@CÔNG TY TNHH SACLET, CHỨNG NHẬN ĐĂNG KÝ DOANH NGHIỆP TỪ NGÀY 01/01/2024 </strong>
                         </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
+                </div>
+                <div class="footer-bottom col-4 col-sm-12 text-right">
+                    <img style="width: 100px;" src="./img/footerImg.png" />
+                </div>
+            </div>
+            <div class="row footer-bottom-responsive">
+                <div class="col-8">
+                    <img style="width: 100px;" src="./img/footerImg.png" />
+                </div>
+                <div class="col-4 text-right">
+                    <i style="font-size: 20px; padding: 0px 8px;" class="fa fa-facebook" aria-hidden="true"></i>
+                    <i style="font-size: 20px; padding: 0px 8px;" class="fa fa-youtube" aria-hidden="true"></i>
+                    <i style="font-size: 20px; padding: 0px 8px;" class="fa fa-instagram" aria-hidden="true"></i>
                 </div>
             </div>
         </div>
