--- a/admin-login.html
+++ b/admin-login.html
@@ -115,13 +115,43 @@
                                     <button type="button" class="btn btn-black btn-block btn-round">Đăng ký</button>
                                 </form>
                             </div>
+                        </div>
+                        <div id="forgot-password" class="tab-pane fade">
+                            <h3 class="d-block text-center"><strong>Quên mật khẩu</strong></h3>
+                            <div style="height: 80px;" class="d-block text-center"><img src="img/logo/logonew-03.jpg" alt="" style="object-fit: cover; height: 100%;"></div>
+                            <div style="font-size: 13px;" class="d-block text-center">Đăng nhập để không bỏ lỡ quyền lợi tích luỹ cho bất kỳ đơn hàng nào</div>
+                            <div class="d-block text-center mt-1"><strong>Lấy lại mật khẩu</strong></div>
+                            <a style="height: 40px;" class="d-block text-center google mt-2"><img src="img/logo/google.jpg" alt="" style="object-fit: cover; height: 100%; padding: 8px 0px;"></a>
+                            <div class="row">
+                                <div class="col-5"><hr></div>
+                                <div class="col-2">Hoặc</div>
+                                <div class="col-5"><hr></div>
+                            </div>
+                            <div class="d-flex flex-column text-center">
+                                <form>
+                                    <div class="form-group">
+                                        <input type="email" class="form-control btn-round px-3" id="email1" placeholder="Email">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control btn-round px-3" id="text1" placeholder="Mã xác minh">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" class="form-control btn-round px-3" id="password1" placeholder="Mật khẩu mới">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" class="form-control btn-round px-3" id="password2" placeholder="Xác nhận mật khẩu">
+                                    </div>
+                                    <button type="button" class="btn btn-black btn-block btn-round">Đăng ký</button>
+                                </form>
+                            </div>
                             <!-- <div style="padding: 5px 0px;" class="extendForm">
                                 <a data-toggle="tab" href="#login" style="cursor: pointer; color: cornflowerblue;">Đăng nhập</a>
                             </div> -->
                         </div>
                       </div>
                       <ul style="justify-content: space-between; border: none; padding: 5px 0px;" class="nav nav-tabs extendForm" role="tablist">
-                        <li class="nav-item"><a data-toggle="tab" href="#login" class="mr-2 direction active">Đăng nhập</a><a style="cursor: pointer; color: #007bff;">Quên mật khẩu</a></li>
+                        <li class="nav-item"><a data-toggle="tab" href="#login" class="mr-2 direction active">Đăng nhập</a></li>
+                        <li class="nav-item"><a data-toggle="tab" href="#forgot-password" class="mr-2 direction">Quên mật khẩu</a></li>
                         <li class="nav-item"><a data-toggle="tab" href="#register" class="direction">Đăng ký tài khoản mới</a></li>
                     </ul>
                   </div>
