--- a/checkout.html
+++ b/checkout.html
@@ -45,7 +45,7 @@
                             <li><a href="./best-seller.html">Sản phẩm bán chạy</a></li>
                             <li class=""><a href="./favourite.html">Nữ</a></li>
                             <li><a href="./male.html">Nam</a></li>
-                            <li><a href="#">Tin tức</a></li>
+                            <li><a href="./news.html">Tin tức</a></li>
                             <li><a href="./introduce.html">Giới thiệu</a></li>
                         </ul>
                     </nav>
@@ -54,7 +54,7 @@
                     <div class="header__nav__option">
                         <div class="row">
                             <div class="col-lg-6 col-md-6">
-                                <input type="text" name="search" placeholder="Search..">
+                                <input id="search" type="text" name="search" placeholder="Search..">
                             </div>
                             <div class="col-lg-2 col-md-2">
                                 <a class="d-block" href="/favourite.html">
@@ -86,7 +86,7 @@
 
     <!-- Product Section Begin -->
     <section class="shop-details product spad" style="background-color: #FAFAFA;">
-        <div class="product-detail-breadcrumb">
+        <div class="product-detail-breadcrumb hide-in-responsive">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -107,10 +107,65 @@
                         <span class="font-weight-bold" style="font-size: 40px;">THANH TOÁN</span>
                     </div>
                 </div>
-                <div class="row py-5">                    
-                    <div class="col-lg-8 col-md-8">
+                <div class="row">
+                    <div id="checkout-product-list" class="col-12 show-in-responsive">
+                        <div class="border-top border-bottom py-4">
+                            <h5 class="font-weight-bold">TỔNG ĐƠN HÀNG: 2 SẢN PHẨM</h5>
+                            <div class="row my-4 item">
+                                <div class="col-4">
+                                    <img class="h-100" src="./img/nu/aophong/aophong1/4.webp" alt="">
+                                </div>
+                                <div class="col-8 favourite-prd">
+                                    <h4 class="font-weight-bold pb-4">Áo phông nữ cotton dáng ngắn in chữ</h4>
+                                    <h5>Màu sắc: Đen</h5>
+                                    <h5>Kích cỡ: XL</h5>
+                                    <div class="d-flex justify-content-between mt-4">
+                                        <h5>x1</h5>
+                                        <h5><span><strong>149.500 <span style="text-decoration: underline;">đ</span></strong></span></h5>
+                                    </div>                                    
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row my-4 item">
+                                <div class="col-4">
+                                    <img class="h-100" src="./img/nu/3.jpg" alt="">
+                                </div>
+                                <div class="col-8 favourite-prd">
+                                    <h4 class="font-weight-bold pb-4">Váy liền nữ ngắn tay dáng A dài</h4>
+                                    <h5>Màu sắc: Đen</h5>
+                                    <h5>Kích cỡ: XL</h5>
+                                    <div class="d-flex justify-content-between mt-4">
+                                        <h5>x1</h5>
+                                        <h5><span><strong>149.500 <span style="text-decoration: underline;">đ</span></strong></span></h5>
+                                    </div>                                    
+                                </div>
+                            </div>
+                        </div>
+                        <div class="price">
+                            <div class="d-flex justify-content-between mt-3">
+                                <span><strong>Giá</strong></span>
+                                <span>599.000 <span style="text-decoration: underline;">đ</span></span>
+                            </div>
+                            <div class="d-flex justify-content-between mt-3">
+                                <span><strong>Khuyến mãi</strong></span>
+                                <span>-100.000 <span style="text-decoration: underline;">đ</span></span>
+                            </div>
+                            <div class="d-flex justify-content-between mt-3">
+                                <span><strong>Vận chuyển</strong></span>
+                                <span>+30.000 <span style="text-decoration: underline;">đ</span></span>
+                            </div>
+                            <div class="d-flex justify-content-end mt-3">
+                                <span>-30.000 <span style="text-decoration: underline;">đ</span></span>
+                            </div>
+                            <div class="d-flex justify-content-between mt-3">
+                                <span><strong>Tổng tiền</strong></span>
+                                <span><strong>499.000 <span style="text-decoration: underline;">đ</span></strong></span>
+                            </div>
+                        </div>
+                    </div>               
+                    <div class="col-lg-8 col-md-8 col-sm-12" style="margin-top: 70px;">
                         <form action="" id="checkout-form" class="custom-form mx-2"  onsubmit="checkoutFormSubmit()">
-                            <h4 class="font-weight-bold">ĐỊA CHỈ GIAO HÀNG</h4>
+                            <h3 class="font-weight-bold">ĐỊA CHỈ GIAO HÀNG</h3>
                             <div class="row">
                                 <div class="col-lg-6 col-md-6 custom-group name-group">
                                     <label class="" for="lastName">Họ <span class="text-danger">*</span></label>
@@ -155,7 +210,7 @@
                             </div>
                             <div class="row">
                                 <div class="col custom-group title-group">
-                                    <label class="" for="title-input">Hình thức thanh toán <span class="text-danger">*</span></label>
+                                    <label class="" for="title-input">Hình thức thanh toán</label>
                                     <div class=" my-2">
                                         <input type="radio" class="mx-0" name="shipping" value="1" checked>
                                         <span>
@@ -176,7 +231,7 @@
     
                         </form>
                     </div>
-                    <div id="checkout-product-list" class="col-lg-4 col-md-4 ">
+                    <div id="checkout-product-list" class="col-lg-4 col-md-4 hide-in-responsive">
                         <div class="border px-3 py-4">
                             <h5 class="font-weight-bold">TỔNG ĐƠN HÀNG: 2 SẢN PHẨM</h5>
                             <div class="row my-4 item">
@@ -240,9 +295,9 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="footer__about">
-                        <h5 class="mb-3"><strong>THỜI TRANG SCARLET</strong></h5>
+                        <h5 class="mb-3"><strong>THỜI TRANG SCARLET</strong> <strong class="footer-responsive-icon"><i class="fa fa-caret-up" aria-hidden="true"></i></strong></h5>
                         <ul>
                             <li><a href="#">Đăng ký thành viên</a></li>
                             <li><a href="#">Ưu đãi Độc quyền</a></li>
@@ -250,9 +305,9 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="footer__about">
-                        <h5 class="mb-3"><strong>CHÍNH SÁCH</strong></h5>
+                        <h5 class="mb-3"><strong>CHÍNH SÁCH</strong> <strong class="footer-responsive-icon"><i class="fa fa-caret-up" aria-hidden="true"></i></strong></h5>
                         <ul>
                             <li><a href="#">Chính sách đổi trả 60 ngày</a></li>
                             <li><a href="#">Chính sách khuyến mãi</a></li>
@@ -260,23 +315,23 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="footer__about">
-                        <h5 class="mb-3"><strong>CHĂM SÓC KHÁCH HÀNG</strong></h5>
+                        <h5 class="mb-3"><strong>CHĂM SÓC KHÁCH HÀNG</strong> <strong class="footer-responsive-icon"><i class="fa fa-caret-up" aria-hidden="true"></i></strong></h5>
                         <ul>
                             <li><a href="#">Trải nghiệm mua sắm</a></li>
                             <li><a href="#">Hỏi đáp - FAQs</a></li>
                         </ul>
-                        <h5 class="mb-3 mt-2"><strong>KIẾN THỨC MẶC ĐẸP</strong></h5>
+                        <h5 class="mb-3 mt-2"><strong>KIẾN THỨC MẶC ĐẸP</strong> <strong class="footer-responsive-icon"><i class="fa fa-caret-up" aria-hidden="true"></i></strong></h5>
                         <ul>
                             <li><a href="#">Hướng dẫn chọn size</a></li>
                             <li><a href="#">Blog</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="footer__about">
-                        <h5 class="mb-3"><strong>ĐỊA CHỈ LIÊN HỆ</strong></h5>
+                        <h5 class="mb-3"><strong>ĐỊA CHỈ LIÊN HỆ</strong> <strong class="footer-responsive-icon"><i class="fa fa-caret-up" aria-hidden="true"></i></strong></h5>
                         <ul>
                             <li>Số 96 Định Công, Quận Hoàng Mai, TP.Hà Nội</li>
                             <li>1800.8001</li>
@@ -285,15 +340,28 @@
                     </div>
                 </div>
             </div>
+            <hr>
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-md-8 col-sm-12">
                     <div class="footer__copyright__text">
-                        <hr>
-                        <p>
-                            <strong>@CÔNG TY TNHH SACLET</strong>, CHỨNG NHẬN ĐĂNG KÝ DOANH NGHIỆP TỪ NGÀY 01/01/2024 
+                        <p class="text-center">
+                            <strong>@CÔNG TY TNHH SACLET, CHỨNG NHẬN ĐĂNG KÝ DOANH NGHIỆP TỪ NGÀY 01/01/2024 </strong>
                         </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
+                </div>
+                <div class="footer-bottom col-4 col-sm-12 text-right">
+                    <img style="width: 100px;" src="./img/footerImg.png" />
+                </div>
+            </div>
+            <div class="row footer-bottom-responsive">
+                <div class="col-8">
+                    <img style="width: 100px;" src="./img/footerImg.png" />
+                </div>
+                <div class="col-4 text-right">
+                    <i style="font-size: 20px; padding: 0px 8px;" class="fa fa-facebook" aria-hidden="true"></i>
+                    <i style="font-size: 20px; padding: 0px 8px;" class="fa fa-youtube" aria-hidden="true"></i>
+                    <i style="font-size: 20px; padding: 0px 8px;" class="fa fa-instagram" aria-hidden="true"></i>
                 </div>
             </div>
         </div>
